Created page with "V zobrazení stromové struktury lze nad výchozí ikonou objektu zobrazit jednu nebo více překryvných ikon. Dostupné překryvné ikony a jejich význam jsou uvedeny níže."

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -67,7 +67,7 @@
 <p><span id="Overlay_icons"></span>
 </p>
 <h2><span id="P.C5.99ekryvn.C3.A9_ikony"></span><span class="mw-headline" id="P&#345;ekryvn&eacute;_ikony">P&#345;ekryvn&eacute; ikony</span></h2>
-<p>One or more overlay icons can be displayed on top of an object's default icon in the Tree View. The available overlay icons and their meaning are listed below.
+<p>V zobrazen&iacute; stromov&eacute; struktury lze nad v&yacute;choz&iacute; ikonou objektu zobrazit jednu nebo v&iacute;ce p&#345;ekryvn&yacute;ch ikon. Dostupn&eacute; p&#345;ekryvn&eacute; ikony a jejich v&yacute;znam jsou uvedeny n&iacute;&#382;e.
 </p>
 <h3><span class="mw-headline" id="White_check_mark_on_blue_background"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_recompute.png&amp;filetimestamp=20240413194537&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_recompute.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White check mark on blue background</span></h3>
 <p>This indicates that the object has to be <a href="../Std_Refresh.html" title="Std Refresh">recomputed</a>, due to changes made to the model or because the user marked the object in the Tree View context menu to be recomputed. In most cases recomputes are triggered automatically, but sometimes they are delayed for performance reasons.
@@ -166,12 +166,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122192440
+Cached time: 20260122192508
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.153 seconds
-Real time usage: 0.422 seconds
+CPU time usage: 0.131 seconds
+Real time usage: 0.187 seconds
 Preprocessor visited node count: 757/1000000
 Post&#8208;expand include size: 37999/2097152 bytes
 Template argument size: 12206/2097152 bytes
@@ -182,19 +182,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  114.597      1 -total
- 34.04%   39.008      3 Template:Navigation_menu_2
- 28.62%   32.796      1 Template:Std_Base_navi/cs
- 25.31%   29.008      1 Template:Interface_navi/cs
- 12.60%   14.440      1 Template:PropertyView
- 11.09%   12.705      1 Template:Userdocnavi/cs
-  3.55%    4.070      2 Template:PropertyData
-  3.15%    3.614      2 Template:Caption
-  2.92%    3.344      1 Template:FALSE
-  2.60%    2.981      1 Template:TOCright
+100.00%   45.624      1 -total
+ 21.97%   10.023      1 Template:Std_Base_navi/cs
+ 18.81%    8.581      3 Template:Navigation_menu_2
+ 15.70%    7.162      1 Template:Userdocnavi/cs
+ 15.34%    6.999      1 Template:Interface_navi/cs
+ 10.19%    4.648      2 Template:PropertyData
+  5.94%    2.710      3 Template:Variable
+  5.71%    2.604      1 Template:PropertyView
+  5.26%    2.401      1 Template:FALSE
+  5.21%    2.378     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122192439 and revision id 1742614. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122192508 and revision id 1742616. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
