Created page with "=== [[File:FreeCAD_Tree_view_recompute.png]] Bílá zaškrtávací značka na modrém pozadí ==="

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -68,8 +68,9 @@
 </p>
 <h2><span id="P.C5.99ekryvn.C3.A9_ikony"></span><span class="mw-headline" id="P&#345;ekryvn&eacute;_ikony">P&#345;ekryvn&eacute; ikony</span></h2>
 <p>V zobrazen&iacute; stromov&eacute; struktury lze nad v&yacute;choz&iacute; ikonou objektu zobrazit jednu nebo v&iacute;ce p&#345;ekryvn&yacute;ch ikon. Dostupn&eacute; p&#345;ekryvn&eacute; ikony a jejich v&yacute;znam jsou uvedeny n&iacute;&#382;e.
+</p><p><span id="File:FreeCAD_Tree_view_recompute.png_White_check_mark_on_blue_background"></span>
 </p>
-<h3><span class="mw-headline" id="White_check_mark_on_blue_background"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_recompute.png&amp;filetimestamp=20240413194537&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_recompute.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White check mark on blue background</span></h3>
+<h3><span id="B.C3.ADl.C3.A1_za.C5.A1krt.C3.A1vac.C3.AD_zna.C4.8Dka_na_modr.C3.A9m_pozad.C3.AD"></span><span class="mw-headline" id="B&iacute;l&aacute;_za&scaron;krt&aacute;vac&iacute;_zna&#269;ka_na_modr&eacute;m_pozad&iacute;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_recompute.png&amp;filetimestamp=20240413194537&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_recompute.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> B&iacute;l&aacute; za&scaron;krt&aacute;vac&iacute; zna&#269;ka na modr&eacute;m pozad&iacute;</span></h3>
 <p>This indicates that the object has to be <a href="../Std_Refresh.html" title="Std Refresh">recomputed</a>, due to changes made to the model or because the user marked the object in the Tree View context menu to be recomputed. In most cases recomputes are triggered automatically, but sometimes they are delayed for performance reasons.
 </p>
 <h3><span class="mw-headline" id="White_exclamation_mark_on_red_background"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_error.png&amp;filetimestamp=20240413200438&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_error.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White exclamation mark on red background</span></h3>
@@ -166,13 +167,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122192508
+Cached time: 20260122192550
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.131 seconds
-Real time usage: 0.187 seconds
-Preprocessor visited node count: 757/1000000
+CPU time usage: 0.148 seconds
+Real time usage: 0.208 seconds
+Preprocessor visited node count: 758/1000000
 Post&#8208;expand include size: 37999/2097152 bytes
 Template argument size: 12206/2097152 bytes
 Highest expansion depth: 7/100
@@ -182,19 +183,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.624      1 -total
- 21.97%   10.023      1 Template:Std_Base_navi/cs
- 18.81%    8.581      3 Template:Navigation_menu_2
- 15.70%    7.162      1 Template:Userdocnavi/cs
- 15.34%    6.999      1 Template:Interface_navi/cs
- 10.19%    4.648      2 Template:PropertyData
-  5.94%    2.710      3 Template:Variable
-  5.71%    2.604      1 Template:PropertyView
-  5.26%    2.401      1 Template:FALSE
-  5.21%    2.378     19 Template:KEY
+100.00%   47.597      1 -total
+ 19.48%    9.273      1 Template:Std_Base_navi/cs
+ 17.18%    8.176      3 Template:Navigation_menu_2
+ 16.31%    7.761      1 Template:Interface_navi/cs
+ 12.41%    5.908      1 Template:Userdocnavi/cs
+ 11.89%    5.661      2 Template:PropertyData
+  7.63%    3.633      3 Template:Variable
+  6.10%    2.904      1 Template:PropertyView
+  5.79%    2.756     19 Template:KEY
+  5.04%    2.399      5 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122192508 and revision id 1742616. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122192549 and revision id 1742618. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
