--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -75,7 +75,7 @@
 </p><p><span id="File:FreeCAD_Tree_view_error.png_White_exclamation_mark_on_red_background"></span>
 </p>
 <h3><span id="B.C3.ADl.C3.BD_vyk.C5.99i.C4.8Dn.C3.ADk_na_.C4.8Derven.C3.A9m_pozad.C3.AD"></span><span class="mw-headline" id="B&iacute;l&yacute;_vyk&#345;i&#269;n&iacute;k_na_&#269;erven&eacute;m_pozad&iacute;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_error.png&amp;filetimestamp=20240413200438&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_error.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> B&iacute;l&yacute; vyk&#345;i&#269;n&iacute;k na &#269;erven&eacute;m pozad&iacute;</span></h3>
-<p>This indicates that the object has an error that needs to be fixed. After recomputing the whole document a tooltip describing the error is shown when you hover the mouse over the object in the Tree View. Note: All other objects depending on an object in such an error state will not be properly recomputed, thus they may still show some old state.
+<p>To znamen&aacute;, &#382;e objekt obsahuje chybu, kterou je t&#345;eba opravit. Po p&#345;epo&#269;&iacute;t&aacute;n&iacute; cel&eacute;ho dokumentu se p&#345;i najet&iacute; my&scaron;&iacute; na objekt ve stromov&eacute;m zobrazen&iacute; zobraz&iacute; popis chyby. Pozn&aacute;mka: V&scaron;echny ostatn&iacute; objekty z&aacute;visl&eacute; na objektu v takov&eacute;m chybov&eacute;m stavu nebudou spr&aacute;vn&#283; p&#345;epo&#269;&iacute;t&aacute;ny, tak&#382;e mohou st&aacute;le zobrazovat star&yacute; stav.
 </p>
 <h3><span class="mw-headline" id="Purple_chain_link"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_unattached.png&amp;filetimestamp=20240413200053&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_unattached.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Purple chain link</span></h3>
 <p>This is typically shown for <a href="../Sketch.html" title="Sketch">sketches</a>, <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a> primitives, such as box, cylinder, etc. and <a href="../Datum.html" title="Datum">Datum</a> geometry. It indicates that the object is not attached to anything. It has no Attachment Offset and gets its position and alignment solely from its <a href="../Placement.html" title="Placement">Placement</a> property.
@@ -168,12 +168,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122192846
+Cached time: 20260122193005
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.118 seconds
-Real time usage: 0.171 seconds
+CPU time usage: 0.134 seconds
+Real time usage: 0.433 seconds
 Preprocessor visited node count: 759/1000000
 Post&#8208;expand include size: 37999/2097152 bytes
 Template argument size: 12206/2097152 bytes
@@ -184,19 +184,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.925      1 -total
- 43.37%   22.084      1 Template:Std_Base_navi/cs
- 15.62%    7.953      3 Template:Navigation_menu_2
- 12.44%    6.335      1 Template:Interface_navi/cs
- 10.32%    5.254      1 Template:Userdocnavi/cs
-  7.51%    3.823      2 Template:PropertyData
-  5.43%    2.765      1 Template:PropertyView
-  4.97%    2.533      3 Template:Variable
-  3.28%    1.670     19 Template:KEY
-  2.94%    1.499      2 Template:Caption
+100.00%   86.275      1 -total
+ 24.58%   21.205      1 Template:Std_Base_navi/cs
+ 22.01%   18.993      3 Template:Navigation_menu_2
+ 14.20%   12.254      1 Template:Userdocnavi/cs
+ 13.46%   11.610      1 Template:Interface_navi/cs
+  8.12%    7.003      2 Template:PropertyData
+  7.68%    6.627      1 Template:FALSE
+  5.52%    4.758     19 Template:KEY
+  4.58%    3.949      1 Template:PropertyView
+  4.50%    3.879      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122192846 and revision id 1742622. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122193005 and revision id 1742624. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
