Created page with "=== [[File:FreeCAD_Tree_view_unattached.png]] Fialový článek řetězu ==="

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -76,8 +76,9 @@
 </p>
 <h3><span id="B.C3.ADl.C3.BD_vyk.C5.99i.C4.8Dn.C3.ADk_na_.C4.8Derven.C3.A9m_pozad.C3.AD"></span><span class="mw-headline" id="B&iacute;l&yacute;_vyk&#345;i&#269;n&iacute;k_na_&#269;erven&eacute;m_pozad&iacute;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_error.png&amp;filetimestamp=20240413200438&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_error.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> B&iacute;l&yacute; vyk&#345;i&#269;n&iacute;k na &#269;erven&eacute;m pozad&iacute;</span></h3>
 <p>To znamen&aacute;, &#382;e objekt obsahuje chybu, kterou je t&#345;eba opravit. Po p&#345;epo&#269;&iacute;t&aacute;n&iacute; cel&eacute;ho dokumentu se p&#345;i najet&iacute; my&scaron;&iacute; na objekt ve stromov&eacute;m zobrazen&iacute; zobraz&iacute; popis chyby. Pozn&aacute;mka: V&scaron;echny ostatn&iacute; objekty z&aacute;visl&eacute; na objektu v takov&eacute;m chybov&eacute;m stavu nebudou spr&aacute;vn&#283; p&#345;epo&#269;&iacute;t&aacute;ny, tak&#382;e mohou st&aacute;le zobrazovat star&yacute; stav.
+</p><p><span id="File:FreeCAD_Tree_view_unattached.png_Purple_chain_link"></span>
 </p>
-<h3><span class="mw-headline" id="Purple_chain_link"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_unattached.png&amp;filetimestamp=20240413200053&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_unattached.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Purple chain link</span></h3>
+<h3><span id="Fialov.C3.BD_.C4.8Dl.C3.A1nek_.C5.99et.C4.9Bzu"></span><span class="mw-headline" id="Fialov&yacute;_&#269;l&aacute;nek_&#345;et&#283;zu"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_unattached.png&amp;filetimestamp=20240413200053&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_unattached.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Fialov&yacute; &#269;l&aacute;nek &#345;et&#283;zu</span></h3>
 <p>This is typically shown for <a href="../Sketch.html" title="Sketch">sketches</a>, <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a> primitives, such as box, cylinder, etc. and <a href="../Datum.html" title="Datum">Datum</a> geometry. It indicates that the object is not attached to anything. It has no Attachment Offset and gets its position and alignment solely from its <a href="../Placement.html" title="Placement">Placement</a> property.
 </p><p>There is a <a href="../Basic_Attachment_Tutorial.html" title="Basic Attachment Tutorial">Basic Attachment Tutorial</a> explaining how to handle such objects.
 </p>
@@ -168,13 +169,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122193005
+Cached time: 20260122193101
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.134 seconds
-Real time usage: 0.433 seconds
-Preprocessor visited node count: 759/1000000
+CPU time usage: 0.143 seconds
+Real time usage: 0.208 seconds
+Preprocessor visited node count: 760/1000000
 Post&#8208;expand include size: 37999/2097152 bytes
 Template argument size: 12206/2097152 bytes
 Highest expansion depth: 7/100
@@ -184,19 +185,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   86.275      1 -total
- 24.58%   21.205      1 Template:Std_Base_navi/cs
- 22.01%   18.993      3 Template:Navigation_menu_2
- 14.20%   12.254      1 Template:Userdocnavi/cs
- 13.46%   11.610      1 Template:Interface_navi/cs
-  8.12%    7.003      2 Template:PropertyData
-  7.68%    6.627      1 Template:FALSE
-  5.52%    4.758     19 Template:KEY
-  4.58%    3.949      1 Template:PropertyView
-  4.50%    3.879      1 Template:TOCright
+100.00%   40.617      1 -total
+ 20.09%    8.158      1 Template:Std_Base_navi/cs
+ 19.28%    7.829      3 Template:Navigation_menu_2
+ 16.72%    6.793      1 Template:Interface_navi/cs
+ 13.04%    5.295      1 Template:Userdocnavi/cs
+ 10.15%    4.124      2 Template:PropertyData
+  6.78%    2.755      3 Template:Variable
+  5.51%    2.238      6 Template:MenuCommand
+  5.49%    2.232      1 Template:PropertyView
+  5.25%    2.134      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122193005 and revision id 1742624. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122193100 and revision id 1742626. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
