Created page with "To se obvykle zobrazuje u [[Sketch|náčrtů]], primitiv [[PartDesign_Workbench|PartDesign]], jako jsou kostky, válce atd., a [[Datum|Datum (Pomocné)]] geometrie. Označuje, že objekt není k ničemu připojen. Nemá žádné odsazení připojení a svou polohu a zarovnání získává výhradně z vlastnosti [[Placement|Umístění]]."

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -79,7 +79,7 @@
 </p><p><span id="File:FreeCAD_Tree_view_unattached.png_Purple_chain_link"></span>
 </p>
 <h3><span id="Fialov.C3.BD_.C4.8Dl.C3.A1nek_.C5.99et.C4.9Bzu"></span><span class="mw-headline" id="Fialov&yacute;_&#269;l&aacute;nek_&#345;et&#283;zu"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_unattached.png&amp;filetimestamp=20240413200053&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_unattached.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Fialov&yacute; &#269;l&aacute;nek &#345;et&#283;zu</span></h3>
-<p>This is typically shown for <a href="../Sketch.html" title="Sketch">sketches</a>, <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a> primitives, such as box, cylinder, etc. and <a href="../Datum.html" title="Datum">Datum</a> geometry. It indicates that the object is not attached to anything. It has no Attachment Offset and gets its position and alignment solely from its <a href="../Placement.html" title="Placement">Placement</a> property.
+<p>To se obvykle zobrazuje u <a href="../Sketch.html" title="Sketch">n&aacute;&#269;rt&#367;</a>, primitiv <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a>, jako jsou kostky, v&aacute;lce atd., a <a href="../Datum.html" title="Datum">Datum (Pomocn&eacute;)</a> geometrie. Ozna&#269;uje, &#382;e objekt nen&iacute; k ni&#269;emu p&#345;ipojen. Nem&aacute; &#382;&aacute;dn&eacute; odsazen&iacute; p&#345;ipojen&iacute; a svou polohu a zarovn&aacute;n&iacute; z&iacute;sk&aacute;v&aacute; v&yacute;hradn&#283; z vlastnosti <a href="../Placement.html" title="Placement">Um&iacute;st&#283;n&iacute;</a>.
 </p><p>There is a <a href="../Basic_Attachment_Tutorial.html" title="Basic Attachment Tutorial">Basic Attachment Tutorial</a> explaining how to handle such objects.
 </p>
 <h3><span class="mw-headline" id="Yellow_X"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_notfullyconstrained.png&amp;filetimestamp=20240413195703&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_notfullyconstrained.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Yellow X</span></h3>
@@ -169,12 +169,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122193101
+Cached time: 20260122193404
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.143 seconds
-Real time usage: 0.208 seconds
+CPU time usage: 0.157 seconds
+Real time usage: 0.302 seconds
 Preprocessor visited node count: 760/1000000
 Post&#8208;expand include size: 37999/2097152 bytes
 Template argument size: 12206/2097152 bytes
@@ -185,19 +185,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.617      1 -total
- 20.09%    8.158      1 Template:Std_Base_navi/cs
- 19.28%    7.829      3 Template:Navigation_menu_2
- 16.72%    6.793      1 Template:Interface_navi/cs
- 13.04%    5.295      1 Template:Userdocnavi/cs
- 10.15%    4.124      2 Template:PropertyData
-  6.78%    2.755      3 Template:Variable
-  5.51%    2.238      6 Template:MenuCommand
-  5.49%    2.232      1 Template:PropertyView
-  5.25%    2.134      1 Template:TOCright
+100.00%   62.367      1 -total
+ 20.33%   12.677      1 Template:Std_Base_navi/cs
+ 15.87%    9.895      3 Template:Navigation_menu_2
+ 15.74%    9.816      2 Template:PropertyData
+ 12.93%    8.067      1 Template:Interface_navi/cs
+  9.03%    5.631      1 Template:Userdocnavi/cs
+  7.89%    4.920      3 Template:Variable
+  7.18%    4.479      6 Template:MenuCommand
+  6.53%    4.073     19 Template:KEY
+  4.89%    3.049      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122193100 and revision id 1742626. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122193404 and revision id 1742628. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
