--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -84,7 +84,7 @@
 </p><p><span id="File:FreeCAD_Tree_view_notfullyconstrained.png_Yellow_X"></span>
 </p>
 <h3><span id=".C5.BDlut.C3.A9_X"></span><span class="mw-headline" id="&#381;lut&eacute;_X"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_notfullyconstrained.png&amp;filetimestamp=20240413195703&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_notfullyconstrained.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#381;lut&eacute; X</span></h3>
-<p>This is only used for <a href="../Sketch.html" title="Sketch">sketches</a> and indicates that the sketch is not fully constrained. If the sketch is in <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">edit mode</a> the number of remaining degrees of freedom is shown in the <a href="../Sketcher_Dialog.html#Solver_messages" title="Sketcher Dialog">solver messages</a>.
+<p>Pou&#382;&iacute;v&aacute; se pouze pro <a href="../Sketch.html" title="Sketch">n&aacute;&#269;rtky</a> a ozna&#269;uje, &#382;e n&aacute;&#269;rt nen&iacute; pln&#283; zavazben. Pokud je n&aacute;&#269;rt v <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">re&#382;imu &uacute;prav</a>, po&#269;et zb&yacute;vaj&iacute;c&iacute;ch stup&#328;&#367; volnosti se zobraz&iacute; ve <a href="../Sketcher_Dialog.html#Solver_messages" title="Sketcher Dialog">zpr&aacute;v&aacute;ch &#345;e&scaron;itele</a>.
 </p>
 <h3><span class="mw-headline" id="White_arrow_on_green_background"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_tip.png&amp;filetimestamp=20240413195037&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_tip.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White arrow on green background</span></h3>
 <p>This indicates the so called <a href="../PartDesign_Body.html#Tip" title="PartDesign Body">Tip</a> of a <a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a>. It is usually the last feature in a body and represents the whole body to the world outside of the body, e.g. when the body is exported or used in <a href="../Part_Boolean.html" title="Part Boolean">Part boolean</a> operations. The tip can be changed by the user.
@@ -170,12 +170,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122193521
+Cached time: 20260122193638
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.124 seconds
-Real time usage: 0.167 seconds
+CPU time usage: 0.132 seconds
+Real time usage: 0.388 seconds
 Preprocessor visited node count: 761/1000000
 Post&#8208;expand include size: 37999/2097152 bytes
 Template argument size: 12206/2097152 bytes
@@ -186,19 +186,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.267      1 -total
- 35.96%   15.559      1 Template:Userdocnavi/cs
- 19.18%    8.299      3 Template:Navigation_menu_2
- 16.55%    7.162      1 Template:Std_Base_navi/cs
- 11.55%    4.996      1 Template:Interface_navi/cs
-  9.96%    4.308      2 Template:PropertyData
-  6.84%    2.959      3 Template:Variable
-  4.19%    1.811      1 Template:PropertyView
-  3.48%    1.508     19 Template:KEY
-  2.78%    1.203      5 Template:Version
+100.00%   88.109      1 -total
+ 18.30%   16.122      1 Template:Std_Base_navi/cs
+ 15.32%   13.495      1 Template:Interface_navi/cs
+ 14.79%   13.032      1 Template:Userdocnavi/cs
+ 12.30%   10.837      2 Template:PropertyData
+ 11.42%   10.064      3 Template:Navigation_menu_2
+  9.72%    8.568      2 Template:Caption
+  8.13%    7.167      3 Template:Variable
+  6.28%    5.533     19 Template:KEY
+  5.50%    4.842      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122193521 and revision id 1742632. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122193638 and revision id 1742634. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
