--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/Tree_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Widok drzewa (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Tree_View.html" class="mw-pt-progress mw-pt-progress--low" title="Vista em &aacute;rvore (2% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../sv/Tree_View.html" class="mw-pt-progress mw-pt-progress--low" title="Tree View/sv (2% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#1044;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1077;&#1085; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076; (79% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#1044;&#1088;&#1077;&#1074;&#1086; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; (94% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#12484;&#12522;&#12540;&#12499;&#12517;&#12540; (94% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -88,7 +88,7 @@
 </p><p><span id="File:FreeCAD_Tree_view_tip.png_White_arrow_on_green_background"></span>
 </p>
 <h3><span id="B.C3.ADl.C3.A1_.C5.A1ipka_na_zelen.C3.A9m_pozad.C3.AD"></span><span class="mw-headline" id="B&iacute;l&aacute;_&scaron;ipka_na_zelen&eacute;m_pozad&iacute;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_tip.png&amp;filetimestamp=20240413195037&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_tip.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> B&iacute;l&aacute; &scaron;ipka na zelen&eacute;m pozad&iacute;</span></h3>
-<p>This indicates the so called <a href="../PartDesign_Body.html#Tip" title="PartDesign Body">Tip</a> of a <a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a>. It is usually the last feature in a body and represents the whole body to the world outside of the body, e.g. when the body is exported or used in <a href="../Part_Boolean.html" title="Part Boolean">Part boolean</a> operations. The tip can be changed by the user.
+<p>To ozna&#269;uje takzvanou <a href="../PartDesign_Body.html#Tip" title="PartDesign Body">&scaron;pi&#269;ku</a> <a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign T&#283;la</a>. Obvykle se jedn&aacute; o posledn&iacute; prvek v t&#283;le a p&#345;edstavuje cel&eacute; t&#283;lo v&#367;&#269;i vn&#283;j&scaron;&iacute;mu sv&#283;tu, nap&#345;. kdy&#382; je t&#283;lo exportov&aacute;no nebo pou&#382;ito v operac&iacute;ch <a href="../Part_Boolean.html" title="Part Boolean">Part boolean</a>. &Scaron;pi&#269;ku m&#367;&#382;e u&#382;ivatel zm&#283;nit.
 </p>
 <h3><span class="mw-headline" id="Red_backslash"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_suppressed.png&amp;filetimestamp=20240413201121&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_suppressed.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Red backslash</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
@@ -171,35 +171,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122193702
+Cached time: 20260122193952
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.150 seconds
-Real time usage: 0.198 seconds
+CPU time usage: 0.120 seconds
+Real time usage: 0.189 seconds
 Preprocessor visited node count: 762/1000000
 Post&#8208;expand include size: 37999/2097152 bytes
 Template argument size: 12206/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2392/5000000 bytes
+Unstrip post&#8208;expand size: 2393/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.329      1 -total
- 22.28%   10.544      1 Template:Std_Base_navi/cs
- 21.14%   10.006      3 Template:Navigation_menu_2
- 20.69%    9.794      1 Template:Interface_navi/cs
- 10.80%    5.112      1 Template:Userdocnavi/cs
-  8.09%    3.828      1 Template:PropertyView
-  7.76%    3.672      1 Template:FALSE
-  7.43%    3.516      2 Template:PropertyData
-  5.45%    2.578      3 Template:Variable
-  3.85%    1.823     19 Template:KEY
+100.00%   45.698      1 -total
+ 20.85%    9.530      1 Template:Std_Base_navi/cs
+ 14.55%    6.649      3 Template:Navigation_menu_2
+ 12.74%    5.822      1 Template:Interface_navi/cs
+ 11.86%    5.419      2 Template:PropertyData
+ 11.64%    5.318      1 Template:Userdocnavi/cs
+  6.00%    2.743      1 Template:PropertyView
+  4.90%    2.239      1 Template:TOCright
+  4.84%    2.213      6 Template:MenuCommand
+  4.84%    2.212      5 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122193702 and revision id 1742636. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122193951 and revision id 1742638. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
