Created page with "=== [[File:FreeCAD_Tree_view_suppressed.png]] Červené zpětné lomítko ==="

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -89,8 +89,9 @@
 </p>
 <h3><span id="B.C3.ADl.C3.A1_.C5.A1ipka_na_zelen.C3.A9m_pozad.C3.AD"></span><span class="mw-headline" id="B&iacute;l&aacute;_&scaron;ipka_na_zelen&eacute;m_pozad&iacute;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_tip.png&amp;filetimestamp=20240413195037&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_tip.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> B&iacute;l&aacute; &scaron;ipka na zelen&eacute;m pozad&iacute;</span></h3>
 <p>To ozna&#269;uje takzvanou <a href="../PartDesign_Body.html#Tip" title="PartDesign Body">&scaron;pi&#269;ku</a> <a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign T&#283;la</a>. Obvykle se jedn&aacute; o posledn&iacute; prvek v t&#283;le a p&#345;edstavuje cel&eacute; t&#283;lo v&#367;&#269;i vn&#283;j&scaron;&iacute;mu sv&#283;tu, nap&#345;. kdy&#382; je t&#283;lo exportov&aacute;no nebo pou&#382;ito v operac&iacute;ch <a href="../Part_Boolean.html" title="Part Boolean">Part boolean</a>. &Scaron;pi&#269;ku m&#367;&#382;e u&#382;ivatel zm&#283;nit.
+</p><p><span id="File:FreeCAD_Tree_view_suppressed.png_Red_backslash"></span>
 </p>
-<h3><span class="mw-headline" id="Red_backslash"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_suppressed.png&amp;filetimestamp=20240413201121&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_suppressed.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Red backslash</span></h3>
+<h3><span id=".C4.8Cerven.C3.A9_zp.C4.9Btn.C3.A9_lom.C3.ADtko"></span><span class="mw-headline" id="&#268;erven&eacute;_zp&#283;tn&eacute;_lom&iacute;tko"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_suppressed.png&amp;filetimestamp=20240413201121&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_suppressed.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#268;erven&eacute; zp&#283;tn&eacute; lom&iacute;tko</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </p><p>This indicates a suppressed <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a> feature.
 </p>
@@ -171,13 +172,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122193952
+Cached time: 20260122194026
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.120 seconds
-Real time usage: 0.189 seconds
-Preprocessor visited node count: 762/1000000
+CPU time usage: 0.138 seconds
+Real time usage: 0.197 seconds
+Preprocessor visited node count: 763/1000000
 Post&#8208;expand include size: 37999/2097152 bytes
 Template argument size: 12206/2097152 bytes
 Highest expansion depth: 7/100
@@ -187,19 +188,19 @@ Unstrip post&#8208;expand size: 2393/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.698      1 -total
- 20.85%    9.530      1 Template:Std_Base_navi/cs
- 14.55%    6.649      3 Template:Navigation_menu_2
- 12.74%    5.822      1 Template:Interface_navi/cs
- 11.86%    5.419      2 Template:PropertyData
- 11.64%    5.318      1 Template:Userdocnavi/cs
-  6.00%    2.743      1 Template:PropertyView
-  4.90%    2.239      1 Template:TOCright
-  4.84%    2.213      6 Template:MenuCommand
-  4.84%    2.212      5 Template:Version
+100.00%   48.013      1 -total
+ 18.51%    8.887      1 Template:Std_Base_navi/cs
+ 16.30%    7.828      3 Template:Navigation_menu_2
+ 13.72%    6.587      1 Template:Userdocnavi/cs
+ 13.59%    6.526      1 Template:Interface_navi/cs
+ 10.29%    4.943      2 Template:PropertyData
+  8.34%    4.005      1 Template:PropertyView
+  6.78%    3.255      3 Template:Variable
+  5.92%    2.841     19 Template:KEY
+  5.91%    2.839      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122193951 and revision id 1742638. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194026 and revision id 1742640. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
