--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -172,12 +172,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122194026
+Cached time: 20260122194032
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.138 seconds
-Real time usage: 0.197 seconds
+Real time usage: 0.302 seconds
 Preprocessor visited node count: 763/1000000
 Post&#8208;expand include size: 37999/2097152 bytes
 Template argument size: 12206/2097152 bytes
@@ -188,19 +188,19 @@ Unstrip post&#8208;expand size: 2393/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.013      1 -total
- 18.51%    8.887      1 Template:Std_Base_navi/cs
- 16.30%    7.828      3 Template:Navigation_menu_2
- 13.72%    6.587      1 Template:Userdocnavi/cs
- 13.59%    6.526      1 Template:Interface_navi/cs
- 10.29%    4.943      2 Template:PropertyData
-  8.34%    4.005      1 Template:PropertyView
-  6.78%    3.255      3 Template:Variable
-  5.92%    2.841     19 Template:KEY
-  5.91%    2.839      2 Template:Caption
+100.00%   69.781      1 -total
+ 37.58%   26.227      1 Template:Userdocnavi/cs
+ 17.77%   12.399      1 Template:Std_Base_navi/cs
+ 14.64%   10.213      3 Template:Navigation_menu_2
+ 11.22%    7.832      1 Template:Interface_navi/cs
+  9.64%    6.724      1 Template:FALSE
+  4.81%    3.358      2 Template:Caption
+  3.63%    2.534      2 Template:PropertyData
+  3.51%    2.450      6 Template:MenuCommand
+  3.10%    2.164      1 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194026 and revision id 1742640. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194032 and revision id 1742640. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
