Created page with "=== [[File:FreeCAD_Tree_view_link.png]] Bílá šipka směřující nahoru ==="

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -94,8 +94,9 @@
 <h3><span id=".C4.8Cerven.C3.A9_zp.C4.9Btn.C3.A9_lom.C3.ADtko"></span><span class="mw-headline" id="&#268;erven&eacute;_zp&#283;tn&eacute;_lom&iacute;tko"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_suppressed.png&amp;filetimestamp=20240413201121&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_suppressed.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#268;erven&eacute; zp&#283;tn&eacute; lom&iacute;tko</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </p><p>To ozna&#269;uje potla&#269;enou funkci pracovn&iacute; plochy <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a>.
+</p><p><span id="File:FreeCAD_Tree_view_link.png_White_upwards_curved_arrow"></span>
 </p>
-<h3><span class="mw-headline" id="White_upwards_curved_arrow"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link.png&amp;filetimestamp=20241010072353&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White upwards curved arrow</span></h3>
+<h3><span id="B.C3.ADl.C3.A1_.C5.A1ipka_sm.C4.9B.C5.99uj.C3.ADc.C3.AD_nahoru"></span><span class="mw-headline" id="B&iacute;l&aacute;_&scaron;ipka_sm&#283;&#345;uj&iacute;c&iacute;_nahoru"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link.png&amp;filetimestamp=20241010072353&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> B&iacute;l&aacute; &scaron;ipka sm&#283;&#345;uj&iacute;c&iacute; nahoru</span></h3>
 <p>This indicates a <a href="../Std_LinkMake.html" title="Std LinkMake">linked</a> object.
 </p>
 <h3><span class="mw-headline" id="Two_white_upwards_curved_arrows"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link_external.png&amp;filetimestamp=20241010072419&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link_external.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Two white upwards curved arrows</span></h3>
@@ -172,13 +173,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122194128
+Cached time: 20260122194215
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.135 seconds
-Real time usage: 0.205 seconds
-Preprocessor visited node count: 763/1000000
+CPU time usage: 0.138 seconds
+Real time usage: 0.195 seconds
+Preprocessor visited node count: 764/1000000
 Post&#8208;expand include size: 37999/2097152 bytes
 Template argument size: 12206/2097152 bytes
 Highest expansion depth: 7/100
@@ -188,19 +189,19 @@ Unstrip post&#8208;expand size: 2393/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.631      1 -total
- 32.16%   15.318      1 Template:Std_Base_navi/cs
- 20.25%    9.646      3 Template:Navigation_menu_2
- 15.69%    7.475      1 Template:Interface_navi/cs
- 11.97%    5.703      1 Template:Userdocnavi/cs
-  6.13%    2.921      2 Template:PropertyData
-  5.56%    2.649      1 Template:FALSE
-  5.52%    2.627      6 Template:MenuCommand
-  5.20%    2.476      2 Template:Caption
-  3.85%    1.834      3 Template:Variable
+100.00%   49.271      1 -total
+ 23.73%   11.691      1 Template:Std_Base_navi/cs
+ 19.60%    9.658      3 Template:Navigation_menu_2
+ 14.83%    7.308      1 Template:Interface_navi/cs
+ 12.89%    6.349      1 Template:Userdocnavi/cs
+  8.11%    3.996      2 Template:PropertyData
+  5.47%    2.695      2 Template:Caption
+  5.26%    2.591      1 Template:PropertyView
+  5.26%    2.590      3 Template:Variable
+  5.23%    2.577     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194128 and revision id 1742643. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194215 and revision id 1742645. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
