Created page with "Označuje [[Std_LinkMake|propojený]] objekt."

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -97,7 +97,7 @@
 </p><p><span id="File:FreeCAD_Tree_view_link.png_White_upwards_curved_arrow"></span>
 </p>
 <h3><span id="B.C3.ADl.C3.A1_.C5.A1ipka_sm.C4.9B.C5.99uj.C3.ADc.C3.AD_nahoru"></span><span class="mw-headline" id="B&iacute;l&aacute;_&scaron;ipka_sm&#283;&#345;uj&iacute;c&iacute;_nahoru"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link.png&amp;filetimestamp=20241010072353&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> B&iacute;l&aacute; &scaron;ipka sm&#283;&#345;uj&iacute;c&iacute; nahoru</span></h3>
-<p>This indicates a <a href="../Std_LinkMake.html" title="Std LinkMake">linked</a> object.
+<p>Ozna&#269;uje <a href="../Std_LinkMake.html" title="Std LinkMake">propojen&yacute;</a> objekt.
 </p>
 <h3><span class="mw-headline" id="Two_white_upwards_curved_arrows"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link_external.png&amp;filetimestamp=20241010072419&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link_external.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Two white upwards curved arrows</span></h3>
 <p>This indicates a <a href="../Std_LinkMake.html" title="Std LinkMake">linked</a> object loaded from an external document.
@@ -173,12 +173,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122194215
+Cached time: 20260122194242
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.138 seconds
-Real time usage: 0.195 seconds
+CPU time usage: 0.124 seconds
+Real time usage: 0.197 seconds
 Preprocessor visited node count: 764/1000000
 Post&#8208;expand include size: 37999/2097152 bytes
 Template argument size: 12206/2097152 bytes
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 2393/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.271      1 -total
- 23.73%   11.691      1 Template:Std_Base_navi/cs
- 19.60%    9.658      3 Template:Navigation_menu_2
- 14.83%    7.308      1 Template:Interface_navi/cs
- 12.89%    6.349      1 Template:Userdocnavi/cs
-  8.11%    3.996      2 Template:PropertyData
-  5.47%    2.695      2 Template:Caption
-  5.26%    2.591      1 Template:PropertyView
-  5.26%    2.590      3 Template:Variable
-  5.23%    2.577     19 Template:KEY
+100.00%   44.476      1 -total
+ 21.06%    9.365      1 Template:Std_Base_navi/cs
+ 15.06%    6.697      3 Template:Navigation_menu_2
+ 13.86%    6.166      1 Template:Interface_navi/cs
+ 11.89%    5.286      1 Template:Userdocnavi/cs
+ 10.79%    4.798      2 Template:PropertyData
+  6.40%    2.848     19 Template:KEY
+  6.37%    2.831      6 Template:MenuCommand
+  5.63%    2.504      5 Template:Version
+  5.23%    2.328      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194215 and revision id 1742645. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194241 and revision id 1742647. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
