Created page with "=== [[File:FreeCAD_Tree_view_link_external.png]] Dvě bílé šipky směřující nahoru ==="

--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -98,8 +98,9 @@
 </p>
 <h3><span id="B.C3.ADl.C3.A1_.C5.A1ipka_sm.C4.9B.C5.99uj.C3.ADc.C3.AD_nahoru"></span><span class="mw-headline" id="B&iacute;l&aacute;_&scaron;ipka_sm&#283;&#345;uj&iacute;c&iacute;_nahoru"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link.png&amp;filetimestamp=20241010072353&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> B&iacute;l&aacute; &scaron;ipka sm&#283;&#345;uj&iacute;c&iacute; nahoru</span></h3>
 <p>Ozna&#269;uje <a href="../Std_LinkMake.html" title="Std LinkMake">propojen&yacute;</a> objekt.
+</p><p><span id="File:FreeCAD_Tree_view_link_external.png_Two_white_upwards_curved_arrows"></span>
 </p>
-<h3><span class="mw-headline" id="Two_white_upwards_curved_arrows"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link_external.png&amp;filetimestamp=20241010072419&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link_external.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Two white upwards curved arrows</span></h3>
+<h3><span id="Dv.C4.9B_b.C3.ADl.C3.A9_.C5.A1ipky_sm.C4.9B.C5.99uj.C3.ADc.C3.AD_nahoru"></span><span class="mw-headline" id="Dv&#283;_b&iacute;l&eacute;_&scaron;ipky_sm&#283;&#345;uj&iacute;c&iacute;_nahoru"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link_external.png&amp;filetimestamp=20241010072419&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link_external.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Dv&#283; b&iacute;l&eacute; &scaron;ipky sm&#283;&#345;uj&iacute;c&iacute; nahoru</span></h3>
 <p>This indicates a <a href="../Std_LinkMake.html" title="Std LinkMake">linked</a> object loaded from an external document.
 </p>
 <h3><span class="mw-headline" id="Eye_symbol"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_hidden.png&amp;filetimestamp=20240413200716&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_hidden.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Eye symbol</span></h3>
@@ -173,13 +174,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122194242
+Cached time: 20260122194308
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.124 seconds
-Real time usage: 0.197 seconds
-Preprocessor visited node count: 764/1000000
+CPU time usage: 0.130 seconds
+Real time usage: 0.211 seconds
+Preprocessor visited node count: 765/1000000
 Post&#8208;expand include size: 37999/2097152 bytes
 Template argument size: 12206/2097152 bytes
 Highest expansion depth: 7/100
@@ -189,19 +190,19 @@ Unstrip post&#8208;expand size: 2393/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.476      1 -total
- 21.06%    9.365      1 Template:Std_Base_navi/cs
- 15.06%    6.697      3 Template:Navigation_menu_2
- 13.86%    6.166      1 Template:Interface_navi/cs
- 11.89%    5.286      1 Template:Userdocnavi/cs
- 10.79%    4.798      2 Template:PropertyData
-  6.40%    2.848     19 Template:KEY
-  6.37%    2.831      6 Template:MenuCommand
-  5.63%    2.504      5 Template:Version
-  5.23%    2.328      3 Template:Variable
+100.00%   53.813      1 -total
+ 15.85%    8.529      1 Template:Std_Base_navi/cs
+ 14.50%    7.801      1 Template:Interface_navi/cs
+ 13.37%    7.193      3 Template:Navigation_menu_2
+ 11.14%    5.994      2 Template:PropertyData
+  9.87%    5.311      1 Template:Userdocnavi/cs
+  8.57%    4.610      1 Template:FALSE
+  8.10%    4.360      5 Template:Version
+  7.72%    4.154      1 Template:PropertyView
+  7.41%    3.985      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194241 and revision id 1742647. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122194307 and revision id 1742649. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
